--- a/CreativityGymTickets/IMD_Tickets/IMD_Tickets/IMD_Tickets.csproj
+++ b/CreativityGymTickets/IMD_Tickets/IMD_Tickets/IMD_Tickets.csproj
@@ -109,6 +109,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AttendeesController.cs" />
+    <Compile Include="Controllers\TicketsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -117,6 +119,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CreativityGym.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\TicketModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -135,7 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
