--- a/CreativityGymTickets/IMD_Tickets/IMD_Tickets/IMD_Tickets.csproj
+++ b/CreativityGymTickets/IMD_Tickets/IMD_Tickets/IMD_Tickets.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AttendeeModel.cs" />
     <Compile Include="Models\CreativityGym.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
